# minoots-timer-system

./: .dockerignore  .env.example  .firebaserc  .gitignore  2025-07-14-this-session-is-being-continued-from-a-previous-co.txt  AGENTIC_TIMER_ARCHITECTURE.md  AGENT_ONBOARDING_GUIDE.md  AGENT_SYSTEM_DIAGRAMS.md  AGENT_VISUAL_GUIDE.md  AI_AGENT_INTEGRATION.md  API_KEY_BOOTSTRAP_ISSUE_2025-07-14.md  API_TEST_RESULTS.md  BUSINESS_MODEL_ANALYSIS.md  CLAUDE.md  CORRECTED_ARCHITECTURE_UNDERSTANDING.md  CRITICAL_AUTHENTICATION_FIX_2025-07-14.md  CRITICAL_SYSTEM_ISSUES.md  CURRENT_STATUS_SUMMARY.md  CURRENT_SYSTEM_ISSUES_AND_FIXES.md  DEPLOYMENT_COMPLETE.md  DEVELOPMENT_WORKFLOW.md  ESSENTIAL_DOCS_PLAN.md  GEMINI_FIX_REPORT.md  GEMINI_SYSTEM_AUDIT.md  GEMINI_TEST_PLAN.md  IMPLEMENTATION_LOG.md  MINOOTS_MASTER_PLAN.md  QUICK_START_GUIDE.md  README.md  SECURITY.md  STRATEGIC_IMPLEMENTATION_PLAN.md  SYSTEM_ARCHITECTURE_CLARIFICATION.md  SYSTEM_ARCHITECTURE_INCOMPATIBILITY_ANALYSIS.md  SYSTEM_ISSUES_IDENTIFIED.md  TODAYS_CRITICAL_FIXES.md  WEBHOOK_BRIDGE_PRODUCTION_DEPLOYMENT.md  acme-server.js  docker-compose.dev.yml  docker-compose.yml  firebase.json  (+12 more)
.github/workflows/: ci.yml
TOXIC_AITRIPPINGBALLSSLUDGE/: WARNING.md
TOXIC_AITRIPPINGBALLSSLUDGE/old-docs/: AGENT_PATTERNS.md  API_QUICKSTART.md  API_REFERENCE.md  CLAUDE_INTEGRATION.md  ERROR_HANDLING.md  PERMISSIONS.md  QUICK_START.md  SLACK_INTEGRATION.md  TEAM_SETUP_GUIDE.md  TESTING_GUIDE.md  TOKEN_COORDINATION.md  WEBHOOKS.md
active_timers/: timer_1752354943447_3xmsiuptv.json  timer_1752354943447_3xmsiuptv_log.txt  timer_1752354961538_wydqa4pnu.json  timer_1752354961538_wydqa4pnu_log.txt  timer_1752356784362_w67vmi1tw.json  timer_1752356784362_w67vmi1tw_log.txt  timer_1752356784362_w67vmi1tw_script.js  timer_1752356841335_e9ana2pk1.json  timer_1752356841335_e9ana2pk1_log.txt  timer_1752356841335_e9ana2pk1_script.js
apps/control-plane/: Dockerfile  README.md  package.json  tsconfig.json  vitest.config.ts
apps/dashboard/: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package.json  tailwind.config.cjs
apps/desktop/: README.md  main.js  package.json
apps/mobile/: .gitignore  App.tsx  README.md  app.json  package.json  tsconfig.json
apps/slack-bot/: .env.example  README.md  package.json  tsconfig.json
archives/: AUTHENTICATION_STRIPE_SETUP_GUIDE.md  CRITICAL_FIXES_CHANGELOG.md  DOCUMENTATION_FRAUD_AUDIT.md  IMPLEMENTATION_LOG.md  RBAC_DEPLOYMENT_STATUS.md  claude-audit-tracking.md  deployment_log.txt  full_deployment_log.txt  gemini-audit-1.md  test-real-api.js  test-simple.js  test-tilapia.js
archives/local-development-prototypes/: README.md
claude-docs-drafts/: QUICK_START.md  README.md  SDK_GUIDE.md  TEAM_FEATURES.md  WEBHOOKS.md
claude-final-refactored/: ADDITIONAL_DOCS_NEEDED.md  AUTHENTICATION.md  MCP_INTEGRATION.md  MONITORING.md  OLD_DOCS_REPLACEMENT_ANALYSIS.md  QUICK_START.md  README.md  REFACTOR_ANALYSIS.md  VERIFICATION_CHECKLIST.md  WEBHOOKS.md
docs/: ASYNC_REFACTOR_PLAN.md  DEVELOPMENT_TRACK.md  DEVLOG_AND_TESTING_SYSTEM.md  ENGINEERING_PRIORITIES.md  PLATFORM_STATUS.md  PROJECT_PRIORITIES.md
docs/devlog/: 2025-10-15.md  2025-10-16.md  2025-10-17.md  2025-10-18.md  2025-10-19.md  2025-10-20.md  2025-10-21.md  2025-10-22.md  2025-10-23.md  2025-10-24.md  2025-10-25.md  2025-10-26.md
docs/devx/: DEPLOYMENT_AND_TROUBLESHOOTING.md  LOCAL_ENVIRONMENT.md  POLICY_AND_QUOTAS.md
docs/integrations/: ECOSYSTEM_METADATA.md  OVERVIEW.md
examples/: README.md
final-docs-refactored/: API_REFERENCE.md
functions/: CLAUDE.md  index.complex.js  index.js  index.minimal.js  package-lock.json  package.json
gemini-docs-drafts/: API_QUICKSTART.md  API_REFERENCE.md  MONITORING.md  README.md
integrations/: README.md
integrations/python/minoots_agent_tools/: README.md  pyproject.toml
integrations/python/minoots_agent_tools/minoots_agent_tools/: __init__.py  client.py  langchain.py  llama_index.py
integrations/python/minoots_agent_tools/tests/: test_client.py
mcp/: README.md  enhanced-session-timer.js  index.js  package.json
mcp-timer-bridge/: CLAUDE.md  MCP_TIMER_ARCHITECTURE.md  mcp-timer-server.js
proto/: THIRD_PARTY_NOTICES.md  timer.proto
scripts/: bootstrap-dev.sh  check-binaries.mjs  check-devlog-entry.js  smoke-infra.sh  ts-node-preload.js
sdk/: README.md  minoots-sdk.d.ts  minoots-sdk.js  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/minoots/: __init__.py  client.py
sdk/python/minoots/integrations/: __init__.py  langchain.py  llamaindex.py
sdk/python/tests/: __init__.py  test_client.py  test_langchain_integration.py  test_llamaindex_integration.py
services/action-orchestrator/: Cargo.toml  Dockerfile  README.md  package.json  tsconfig.json
services/action-orchestrator/scripts/: ensure-jetstream.js  replay-dead-letter.js
services/action-orchestrator/src/: commandBus.ts  index.ts  logger.ts  main.rs  metrics.ts  types.ts
services/action-orchestrator/src/actions/: agentCommand.ts  httpAction.ts  index.ts
services/action-orchestrator/src/infra/: agentCommandBus.test.ts  agentCommandBus.ts  deadLetterQueue.ts  eventSource.ts  kernelClient.ts
services/action-orchestrator/src/schema/: actionBundle.schema.json  registry.ts
services/horology-kernel/: Cargo.toml  Dockerfile  README.md  build.rs
services/horology-kernel/src/: command.rs  grpc.rs  jitter.rs  leadership.rs  lib.rs  replication.rs  rpc.rs  temporal_graph.rs  test_support.rs
services/horology-kernel/src/events/: jetstream.rs
services/horology-kernel/src/persistence/: command_log.rs  mod.rs  postgres.rs
services/horology-kernel/src/replication/: mod.rs  postgres_store.rs
services/horology-kernel/src/telemetry/: jitter.rs  mod.rs  replication.rs
services/horology-kernel/tests/: grpc.rs  grpc_end_to_end.rs  jetstream_integration.rs  postgres_restore.rs  raft_supervisor.rs
system-daemon/: install-daemon.sh  minoots-timer-daemon.sh
tests/: MINOOTS_Auth_Tests.postman_collection.json
webhook-bridge/: DEPLOYMENT_NOTES.md  firebase.json  firestore.indexes.json  firestore.rules
(+171 files in other folders)
