[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "minoots-timer-sdk"
version = "0.1.0"
description = "Async Python client for the MINOOTS Independent Timer System"
readme = "README.md"
authors = [{ name = "MINOOTS DX Team" }]
license = { text = "Proprietary" }
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
]
keywords = ["timers", "agents", "async", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/Domusgpt/minoots-timer-system"
Issues = "https://github.com/Domusgpt/minoots-timer-system/issues"

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.1.40",
]
llamaindex = [
    "llama-index-core>=0.10.50",
]
test = [
    "pytest>=8.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true
