[package]
name = "horology-kernel"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["MINOOTS Engineering"]
description = "Durable timer scheduler core for the MINOOTS platform"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
prost-types = "0.12"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
anyhow = "1.0"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "postgres", "chrono", "uuid", "json", "migrate"] }
sha2 = "0.10"
subtle = "2.5"

[dev-dependencies]

[build-dependencies]
tonic-build = "0.11"
