[project]
name = "minoots-agent-tools"
version = "0.1.0"
description = "LangChain and LlamaIndex connectors for the MINOOTS agentic timer platform"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "MINOOTS Engineering" }
]
license = { text = "MIT" }
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=1.10,<2.0",
]

[project.optional-dependencies]
langchain = [
  "langchain-core>=0.1.30",
]
llamaindex = [
  "llama-index-core>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/Domusgpt/minoots-timer-system"
Documentation = "https://github.com/Domusgpt/minoots-timer-system/tree/work/integrations/python/minoots_agent_tools"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
